# kurs_project

./: CMakeLists.txt  README.md  data.in  rules.xml  курсовая.odt
frameworks/EasyBMP/: .CMakeLists.txt.swp  CMakeLists.txt
frameworks/EasyBMP/src/: .EasyBMP.cpp.swp
frameworks/glt/: .CMakeLists.txt.swp  CMakeLists.txt
frameworks/glt/GL/: glut.h
frameworks/glt/glut/: Makefile  Makefile.bak  glut_cmap.c  glut_event.c  glut_init.c  glut_win.c  glutint.h  win32_glx.c  win32_menu.c  win32_winproc.c
frameworks/glt/msvc/: glut32.dsp
frameworks/glut-3.7/: CMakeLists.txt
frameworks/tinyxml/: CMakeLists.txt
src/: .instruction.h.swp  .parser.h.swm  .parser.h.swn  .parser.h.swo  .parser.h.swp  .proj.cpp.swn  .proj.cpp.swo  .proj.cpp.swp  CMakeLists.txt  instruction.h  menu.h  multik.cpp  multik.h  new_information.h  new_step.h  parser.h  proj.cpp
